--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -1,7 +1,7 @@
 body
   padding: 0
   font: 12px "Lucida Grande", Helvetica, Arial, sans-serif
-  background-color: #000
+  background-color: #001122
   color: #fff
 
 a
@@ -9,6 +9,7 @@ a
 
 #header
   text-align: center
+  margin-bottom: 20px
 
 #header h1
   font-size: 40px
@@ -19,6 +20,25 @@ a
 
 #footer
   text-align: center
+  margin-top: 20px
 
 #footer img
   margin: 0 10px
+
+table#cameras
+  margin: 0 auto
+  
+table#cameras tr.head
+  background-color: #069
+
+table#cameras tr.odd
+  background-color: #444
+
+table#cameras tr.even
+  background-color: #888
+  
+table#cameras th
+  padding: 4px;
+
+table#cameras td
+  padding: 4px;
