--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -7,12 +7,13 @@ html
     #container
       #top
         #header
-          h1 NodeMinder.js
+          a(href='/')
+            img(src='/images/nodeminderjs.png', width=205, height=80, alt='NodeMinder.js')
       #content
         block content
       #bottom
         #footer
           a(href='https://github.com/nodeminderjs/NodeMinder.js')
-            img(src='/images/github.jpg',  width=80, height=80, alt='NodeMinder.js on Github')
+            img(src='/images/github.png',  width=33, height=33, alt='NodeMinder.js on Github')
           a(href='http://nodeminderjs.blogspot.com.br/')
-            img(src='/images/blogger.jpg', width=80, height=80, alt='NodeMinder.js on Blogger')
+            img(src='/images/blogger.png', width=32, height=33, alt='NodeMinder.js on Blogger')
