multichannel card ok

--- a/app/views/grid.jade
+++ b/app/views/grid.jade
@@ -20,5 +20,18 @@ html
             img#img02(src='#', width=320, height=240)
           .info
 
-    
-    
+        #cam03.camera
+          .image
+            img#img03(src='#', width=320, height=240) 
+          .info
+
+        #cam04.camera
+          .image
+            img#img04(src='#', width=320, height=240) 
+          .info
+
+        #cam05.camera
+          .image
+            img#img05(src='#', width=320, height=240) 
+          .info
+
