move and resize image cameras with jquery ui

--- a/app/public/stylesheets/grid.styl
+++ b/app/public/stylesheets/grid.styl
@@ -1,2 +1,22 @@
 .camera
-  float: left
+  position: absolute;
+  
+#cam01
+  left: 0
+  top: 0
+  
+#cam02
+  left: 322px
+  top: 0
+  
+#cam03
+  left: 644px
+  top: 0
+
+#cam04
+  left: 0
+  top: 261px
+  
+#cam05
+  left: 322px
+  top: 261px
