--- a/app/views/grid.jade
+++ b/app/views/grid.jade
@@ -4,34 +4,43 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/grid.css')
-    script(src='//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js')
+    link(rel='stylesheet', href='/stylesheets/jquery-ui.css')
+    script(src='/javascripts/jquery.min.js')
+    script(src='/javascripts/jquery-ui.custom.min.js')
     script(src='/socket.io/socket.io.js')
     script(src='/javascripts/grid.js')
+    script
+      $(function() {
+        $(".draggable").draggable();
+        $(".resizable").resizable({
+          aspectRatio: 320 / 240
+        });        
+      });
   body
     #grid
       .linha
-        #cam01.camera
+        #cam01.camera.draggable
           .image
-            img#img01(src='#', width=320, height=240) 
+            img#img01.resizable(src='#', width=320, height=240) 
           .info
 
-        #cam02.camera
+        #cam02.camera.draggable
           .image
-            img#img02(src='#', width=320, height=240)
+            img#img02.resizable(src='#', width=320, height=240)
           .info
 
-        #cam03.camera
+        #cam03.camera.draggable
           .image
-            img#img03(src='#', width=320, height=240) 
+            img#img03.resizable(src='#', width=320, height=240) 
           .info
 
-        #cam04.camera
+        #cam04.camera.draggable
           .image
-            img#img04(src='#', width=320, height=240) 
+            img#img04.resizable(src='#', width=320, height=240) 
           .info
 
-        #cam05.camera
+        #cam05.camera.draggable
           .image
-            img#img05(src='#', width=320, height=240) 
+            img#img05.resizable(src='#', width=320, height=240) 
           .info
 
