localStorage - resize ok

--- a/app/public/stylesheets/grid.styl
+++ b/app/public/stylesheets/grid.styl
@@ -1,26 +1,16 @@
 .camera
-  position: absolute;
+  border: 1px solid white
   
-#cam01
-  left: 0
-  top: 0
-  
-#cam02
-  left: 322px
-  top: 0
-  
-#cam03
-  left: 644px
-  top: 0
+.image
+  //border: 1px solid blue
 
-#cam04
-  left: 0
-  top: 261px
-  
-#cam05
-  left: 322px
-  top: 261px
+.info
+  border-top: 1px solid white
   
 .change
   color: white
   background-color: red
+  
+#testButton
+  position: absolute
+  top: 700px
