grid and view ok

--- a/app/public/stylesheets/mobile.styl
+++ b/app/public/stylesheets/mobile.styl
@@ -1,16 +1,11 @@
-// view
-
 body
   margin: 0
   background-color: black
   color: white
 
 .camera
-  float: left
-  margin: 0
-  padding: 0
   border: 1px solid white
-  
+
 .info
   border-top: 1px solid white
   
@@ -21,7 +16,7 @@ body
   margin-right: 8px
 
 .cfg
-  text-align: right
+  //text-align: right
   padding: 0 8px
   
 .change
