--- a/app/public/stylesheets/desktop.styl
+++ b/app/public/stylesheets/desktop.styl
@@ -1,13 +1,13 @@
-// view
-
 body
   margin: 0
   background-color: black
   color: white
 
 .camera
-  margin: 0
-  padding: 0
+  border: 1px solid white
+
+.info
+  border-top: 1px solid white
   
 .time
   float: left
@@ -16,7 +16,7 @@ body
   margin-right: 8px
 
 .cfg
-  text-align: right
+  //text-align: right
   padding: 0 8px
   
 .change
