--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -9,12 +9,18 @@ a
 
 #header
   text-align: center
-  margin-bottom: 20px
+  margin: 2px 0 5px 0
 
 #header h1
   font-size: 40px
+  text-align: center
 
 #content
+  margin: 0
+
+#content h1
+  margin: 0 0 7px 0
+  text-align: center
 
 #bottom
 
