--- a/app/public/stylesheets/desktop.styl
+++ b/app/public/stylesheets/desktop.styl
@@ -23,3 +23,12 @@ body
   background-color: red
   color: white
   
+#alert-disconnect
+  background-color: red
+  color: white
+  border: 2px solid white
+  display: none;
+  
+div.disconnect button.ui-dialog-titlebar-close
+  display: none
+  
