--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -17,6 +17,7 @@ a
 
 #content
   margin: 0
+  text-align: center
 
 #content h1
   margin: 0 0 7px 0
@@ -41,7 +42,7 @@ table#cameras tr.odd
   background-color: #444
 
 table#cameras tr.even
-  background-color: #888
+  background-color: #666
   
 table#cameras th
   padding: 4px;
