--- a/app/views/base.jade
+++ b/app/views/base.jade
@@ -2,8 +2,9 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/mobile.css', media='only screen and (max-width: 600px)')
-    link(rel='stylesheet', href='/stylesheets/desktop.css', media='screen and (min-width: 601px)')
+    //link(rel='stylesheet', href='/stylesheets/desktop.css', media='screen and (min-width: 601px)')
+    link(rel='stylesheet', href='/stylesheets/desktop.css')
+    link(rel='stylesheet', href='/stylesheets/mobile.css', media='only screen and (max-width: 800px)')
     block stylesheets
     block javascripts
   body
