--- a/app/public/stylesheets/events.styl
+++ b/app/public/stylesheets/events.styl
@@ -16,8 +16,8 @@ input#datepicker
   width: 90px
   
 div#list
-  margin-top: 20px
-  height: 182px   
+  margin-top: 4px
+  height: 190px   
   overflow: auto 
   
 div#video
@@ -42,3 +42,20 @@ li
   height: 14px
   text-align: center
   cursor: pointer
+
+#hour td
+  font-size: 110%
+
+#hour div
+  text-align: left
+
+#hour table
+  margin: 0 auto
+
+#hour a
+  padding: 2px
+  
+a.hsel
+  background-color: white
+  color: black
+
