--- a/app/public/stylesheets/grid.styl
+++ b/app/public/stylesheets/grid.styl
@@ -1,6 +1,43 @@
-.info
-  border-top: 1px solid white
-  
 #testButton
   position: absolute
-  top: 700px
+  top: 800px
+  
+#debug
+  position: absolute
+  top: 40px
+  left: 440px
+
+  
+#div-context-menu
+  position: absolute
+
+#div-main-menu
+  position: absolute
+  top: 0
+  left: 0
+
+#div-main-menu div
+  background-color: black
+  text-align: center
+
+#div-context-menu div
+  background-color: black
+  text-align: center
+  
+.ui-menu .ui-state-disabled
+  line-height: 1
+  
+.alert
+  display: none
+  position: absolute
+  top: 40px
+  left: 40px
+  padding: 2em
+  
+.ok
+  background-color: #484
+  border: 2px solid #8f8
+
+.error
+  background-color: #844
+  border: 2px solid #f88
