--- a/app/public/stylesheets/style.styl
+++ b/app/public/stylesheets/style.styl
@@ -1,11 +1,13 @@
 body
   padding: 0
   font: 12px "Lucida Grande", Helvetica, Arial, sans-serif
-  background-color: #001122
+  background-color: black
   color: #fff
 
 a
   color: #00B7FF
+  text-decoration: none
+  font-weight: bold
 
 #header
   text-align: center
@@ -49,3 +51,10 @@ table#cameras th
 
 table#cameras td
   padding: 4px;
+
+.black
+  background-color: black
+  width: 8px
+  
+img.thumb
+  border: 1px solid white
