--- a/app/views/events.jade
+++ b/app/views/events.jade
@@ -45,9 +45,64 @@ block content
 
   div#videos
     div#left
-      p.datepicker
+      div.datepicker
         label(for='datepicker') Date:&nbsp;
         input(type='text', id='datepicker')
+      div#hour
+        div &nbsp;Hour:
+        table
+          tr
+            td
+              a.hsel(href="#") 00
+            td
+              a(href="#") 01
+            td
+              a(href="#") 02
+            td
+              a(href="#") 03
+            td
+              a(href="#") 04
+            td
+              a(href="#") 05
+          tr
+            td
+              a(href="#") 06
+            td
+              a(href="#") 07
+            td
+              a(href="#") 08
+            td
+              a(href="#") 09
+            td
+              a(href="#") 10
+            td
+              a(href="#") 11
+          tr
+            td
+              a(href="#") 12
+            td
+              a(href="#") 13
+            td
+              a(href="#") 14
+            td
+              a(href="#") 15
+            td
+              a(href="#") 16
+            td
+              a(href="#") 17
+          tr
+            td
+              a(href="#") 18
+            td
+              a(href="#") 19
+            td
+              a(href="#") 20
+            td
+              a(href="#") 21
+            td
+              a(href="#") 22
+            td
+              a(href="#") 23
       div#list
         ul
 
