--- a/app/public/stylesheets/desktop.styl
+++ b/app/public/stylesheets/desktop.styl
@@ -5,22 +5,42 @@ body
 
 .camera
   border: 1px solid white
+  
+.camera2
+  position: relative
 
 .info
-  border-top: 1px solid white
+  background-color: rgba(0, 0, 0, .3)
+  color: white
+  border-bottom: 1px solid white
+  overflow: hidden
+  font-size: 80%
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
   
 .time
   float: left
-  padding: 0 8px
+  padding: 0 4px
   border-right: 1px solid white
-  margin-right: 8px
 
-.cfg
-  //text-align: right
-  padding: 0 8px
+.cam
+  float: left
+  padding: 0 4px
+  border-right: 1px solid white
+
+.fps
+  float: left
+  padding: 0 4px
+  border-right: 1px solid white
+
+.descr
+  float: left
+  padding: 0 4px
   
 .change
-  background-color: red
+  background-color: rgba(255, 0, 0, .9)
   color: white
   
 #alert-disconnect
