--- a/app/views/grid.jade
+++ b/app/views/grid.jade
@@ -1,28 +1,71 @@
 extends base
 
 block stylesheets
-  link(rel='stylesheet', href='/stylesheets/grid.css')
   link(rel='stylesheet', href='/stylesheets/jquery-ui.css')
+  link(rel='stylesheet', href='/stylesheets/grid.css')
 
 block javascripts
   script(src='/javascripts/jquery.min.js')
   script(src='/javascripts/jquery-ui.custom.min.js')
   script(src='/socket.io/socket.io.js')
-  script
-    var cameras = [
-      #{array}
-    ];
+  script(src='/javascripts/lib.js')
   script(src='/javascripts/grid.js')
   script(src='/javascripts/view.js')
 
 block top
 
 block content
-  each val, key in cameras
-    div.camera.draggable(id='cam' + key)
-      img.resizable(src='#', width="320", height="240") 
-      div.info
-        div.time
-        div.cfg
+  div#cameras
+    each cam in cameras
+      div.camera.draggable(id="#{cam.id}", style="position:absolute; margin-left:0; margin-top:0; top:#{cam.top}px; left:#{cam.left}px;")
+        img.resizable(src='#', width="#{cam.width}", height="#{cam.height}") 
+        div.info
+          div.time
+          div.cam
+          div.fps
+          div.descr
+      
+  
+
   //input#testButton(type="button", value="test")
+  //div.teste(style="position:absolute; top:700px; left:0;")
+  //  p#down down
+  //  p#up up
+  
+
+  #div-context-menu
+    div
+      img(src='/images/nodeminderjs.png', width=102, height=40, alt='NodeMinder.js')
+    ul#img-context-menu
+      //li.ui-state-disabled
+      //  a(href="#") Option 1
+      li#img-menu-1
+        a(href="#") Bring to front
+      li#img-menu-2
+        a(href="#") Send to back
+      hr
+      li#img-menu-3
+        a(href="#") Delete camera
+      
+  #div-main-menu
+    div
+      img(src='/images/nodeminderjs.png', width=102, height=40, alt='NodeMinder.js')
+    ul#main-menu
+      li#main-menu-1
+        a(href="#") Unlock
+      hr
+      li#main-menu-2
+        a(href="#") Add camera
+      hr
+      li#main-menu-3
+        a(href="#") Save config
+      
+  #alert-save-ok.alert.ok
+    div Customizations saved!
+  
+  #alert-save-error.alert.error
+    div Error saving customizations!
+    .alert-msg
+
+  //#debug debug
   
