--- a/app/public/stylesheets/grid.styl
+++ b/app/public/stylesheets/grid.styl
@@ -6,7 +6,6 @@
   position: absolute
   top: 40px
   left: 440px
-
   
 #div-context-menu
   position: absolute
@@ -41,3 +40,58 @@
 .error
   background-color: #844
   border: 2px solid #f88
+
+.alarm
+  border: 1px solid #FFBF00
+
+.alarmed
+  background-color: rgba(255, 191, 0, .5)
+
+.alarmed2
+  background-color: transparent
+    
+.color
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: 100%
+  
+#alarm-dialog
+  display: none
+
+#alarm-list
+  float: left
+  height: 190px   
+  overflow: auto 
+
+#alarm-video
+  float: left
+
+#alarm-ul
+  list-style-type: none
+  margin: 0 4px 0 0
+  padding: 0
+  
+#alarm-ul li
+  margin: 0 0 3px 0
+  padding: 0.3em
+  background: #334455
+  color: white
+  text-align: center
+  cursor: pointer
+  font-size: 80%
+
+#alarm-ul li.selected
+  background: #F39814
+  color: white
+
+.registry
+  border: 1px solid #00BFFF
+  
+#registry-dialog
+  display: none
+
+.ui-dialog-titlebar-close
+  display: none
+  
