--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -12,55 +12,59 @@ block content
         th Image
         th Camera
         th Description
-        th fps
+        th Driver
+        th Fps
         th Rec
         th Rec<br />fps
         th
         th.black
-        - if (sorted.length > 1)
+        - if (cameras.length > 1)
           th Image
           th Camera
           th Description
-          th fps
+          th Driver
+          th Fps
           th Rec
           th Rec<br />fps
           th
     tbody
-      - var j = 0;
-      - var rec = ['-','detect','ON'];
-      - for (var i=0; i<sorted.length; )
-        - if (sorted[i])
-          - var key = sorted[i++]  
+      - var j = 0
+      - var rec = ['-','detect','ON']
+      - for (var i=0; i<cameras.length; )
+        - if (cameras[i])
+          - var cam = cameras[i++]
           tr(class=(j++%2) ? 'even' : 'odd')
             td
-              img.thumb(src="/images/thumbnails/#{key}_96x72.jpg", width="72", height="54") // 64x48
-            td #{key}
-            td #{cameras[key].descr}
-            td #{cameras[key].fps}
-            td #{rec[cameras[key].recording.rec_on]}
-            td #{cameras[key].recording.rec_fps}
+              img.thumb(src="/images/thumbnails/#{cam.id}_96x72.jpg", width="72", height="54") // 64x48
+            td #{cam.id}
+            td #{cam.descr}
+            td #{cam.driver.id}
+            td #{cam.fps.local}
+            td #{rec[cam.recording.on]}
+            td #{cam.recording.fps}
             td
-              a(href='/view/#{key}', target='_blank') View
+              a(href='/view/#{cam.id}', target='_blank') View
               br
-              a(href='/events/#{key}') Events
+              a(href='/events/#{cam.id}') Events
               br
-              a(href='/config/#{key}') Config
+              a(href='/config/#{cam.id}') Config
             td.black
-            - if (sorted[i])
-              - var key = sorted[i++]  
+            - if (cameras[i])
+              - var cam = cameras[i++]
               td
-                img.thumb(src="/images/thumbnails/#{key}_96x72.jpg", width="72", height="54")
-              td #{key}
-              td #{cameras[key].descr}
-              td #{cameras[key].fps}
-              td #{rec[cameras[key].recording.rec_on]}
-              td #{cameras[key].recording.rec_fps}
+                img.thumb(src="/images/thumbnails/#{cam.id}_96x72.jpg", width="72", height="54") // 64x48
+              td #{cam.id}
+              td #{cam.descr}
+              td #{cam.driver.id}
+              td #{cam.fps.local}
+              td #{rec[cam.recording.on]}
+              td #{cam.recording.fps}
               td
-                a(href='/view/#{key}', target='_blank') View
+                a(href='/view/#{cam.id}', target='_blank') View
                 br
-                a(href='/events/#{key}') Events
+                a(href='/events/#{cam.id}') Events
                 br
-                a(href='/config/#{key}') Config
+                a(href='/config/#{cam.id}') Config
 
   p
     a(href='/thumbnails') Thumbnails 
